REGRESSION (iOS 15 / r275792): rAF sometimes seems to lose connection to v-sync signal and runs at < 60 fps https://bugs.webkit.org/show_bug.cgi?id=234923 <rdar://87465488>

Reviewed by Chris Dumez.

In the web process, DisplayRefreshMonitorManager ensures a unique DisplayRefreshMonitor per physical
display by comparing PlatformDisplayIDs.

On iOS, we use fake PlatformDisplayIDs derived from the WebPageID, creating a one-to-one mapping
from RemoteLayerTreeDrawingArea to RemoteLayerTreeDisplayRefreshMonitor.
RemoteLayerTreeDisplayRefreshMonitor has a WeakPtr back to the RemoteLayerTreeDrawingArea, and when
this bug occurred, we were using an old RemoteLayerTreeDisplayRefreshMonitor whose WeakPtr was null.
This happened when a stale PlatformDisplayID caused us to re-use an old
RemoteLayerTreeDisplayRefreshMonitor.

The PlatformDisplayID is held in the UI process by a WebPageProxy, and in the Web process on Page.
However, the ProvisionalPageProxy can create drawing areas, and which then get assigned to a real
WebPageProxy via WebPageProxy::swapToProvisionalPage(). When this happens, we need to do two things:
synthesize a new PlatformDisplayIDs for the WebPageProxy from the webPageID, and tell the web
process that it changed via windowScreenDidChange.

Not easily testable since measuring requestAnimationFrame frequency in an API test will be unreliable.

* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::swapToProvisionalPage):
* Source/WebKit/UIProcess/WebPageProxy.h:
* Source/WebKit/UIProcess/ios/WKContentView.mm:
(-[WKContentView _commonInitializationWithProcessPool:configuration:]):
* Source/WebKit/UIProcess/ios/WebPageProxyIOS.mm:
(WebKit::WebPageProxy::generateDisplayIDFromPageID const):

Canonical link: https://commits.webkit.org/252188@main